<resources>
    <string name="app_name">androider</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="home">홈</string>
    <string name="main">main</string>
    <string name="news_feed">news_feed</string>
    <string name="write">write</string>
    <string name="search">search</string>
    <string name="alarm">alarm</string>
    <string name="cancel">취소</string>
    <string name="complete">완료</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotPlace">주변 인기 장소</string>
    <string name="user1">user5</string>
    <string name="filter">필터</string>
    <string name="Search_location_menu">지역,장소 메뉴, 검색</string>
    <string name="search_all">모두</string>
    <string name="my_location">내 위치</string>
    <string name="local_master">동네마스터</string>
    <string name="search_hint">지역,장소,메뉴,검색</string>
    <string name="app_label">안드로이더</string>
    <string name="title_activity_search_location_menu">SearchLocationMenu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
    <string name="myLocation">내위치</string>
    <string name="map">지도</string>
    <string name="test_search_postingCount">학진님의 포스팅 장소 (2000개)</string>
    <string name="culture">문화</string>
    <string name="life">생활</string>
    <string name="restaurant">음식점</string>
    <string name="cafe">카페</string>
    <string name="alchol">술집</string>

    <string name="insert_number"><u>번호등록</u></string>
    <string name="naver_review">네이버 리뷰</string>
    <string name="sns_review">홈피·SNS</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
