<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id="@+id/local_master_container">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/sv_searchview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/sv_search"
        android:searchIcon="@drawable/ic_search_orange_32dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_search_cancle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="6dp"
        android:background="@drawable/btn_cancle_search"
        android:src="@drawable/ic_clear_orange_32dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_search_result_map"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_map_white_24dp"
            android:background="@drawable/btn_map"
            android:visibility="gone"
            android:text="@string/map"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_player_posting_count"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            android:text="@string/test_search_postingCount"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageButton
        android:id="@+id/btn_localMaster_player_cancle"
        android:layout_width="48dp"
        android:layout_height="60dp"
        android:layout_marginStart="6dp"
        android:background="@color/white"
        android:src="@drawable/ic_chevron_left_black_32dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>